--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<html/>
+<html>
+  <head>
+		<title>Didactics CZ</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+</html>
