--- a/tests/samsung_950_pro.html
+++ b/tests/samsung_950_pro.html
@@ -607,13 +607,13 @@
 </table></div>
 
 <ul>
-  <li>
-    <p>benchmark the write speed drop at thermal throttling of Samsung SSD
-<strong>= drop of write speed from 1136 MB/sec down to 710 MB/sec (by 38%)</strong></p>
-  </li>
-  <li>
-    <p>check if fan cooling can prevent the thermal throttling of Samsung SSD</p>
-  </li>
+  <li>benchmark the write speed drop at thermal throttling of Samsung SSD</li>
+</ul>
+
+<p><strong>= drop of write speed from 1136 MB/sec down to 710 MB/sec (by 38%)</strong></p>
+
+<ul>
+  <li>check if fan cooling can prevent the thermal throttling of Samsung SSD</li>
 </ul>
 
 <p><strong>= YES</strong></p>
