--- a/tests/samsung_950_pro.html
+++ b/tests/samsung_950_pro.html
@@ -170,28 +170,28 @@
 <a href="#as-ssd-benchmark" id="markdown-toc-as-ssd-benchmark">AS SSD Benchmark</a>            <ul>
               <li><a href="#samsung-950-pro-nvme-m2-512-gb-ssd-1" id="markdown-toc-samsung-950-pro-nvme-m2-512-gb-ssd-1">Samsung 950 PRO NVMe M.2 512 GB SSD</a></li>
               <li><a href="#kingston-ssdnow-v300-drive-sata-120-gb-ssd" id="markdown-toc-kingston-ssdnow-v300-drive-sata-120-gb-ssd">Kingston SSDNow V300 Drive SATA 120 GB SSD</a></li>
-              <li><a href="#seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm" id="markdown-toc-seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm">Seagate Barrcuda ST3320620AS SATA 320 GB HDD 7200 rpm</a></li>
+              <li><a href="#seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm" id="markdown-toc-seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm">Seagate Barracuda ST3320620AS SATA 320 GB HDD 7200 rpm</a></li>
             </ul>
           </li>
           <li>
 <a href="#atto-disk-benchmark" id="markdown-toc-atto-disk-benchmark">ATTO Disk Benchmark</a>            <ul>
               <li><a href="#samsung-950-pro-nvme-m2-512-gb-ssd-2" id="markdown-toc-samsung-950-pro-nvme-m2-512-gb-ssd-2">Samsung 950 PRO NVMe M.2 512 GB SSD</a></li>
               <li><a href="#kingston-ssdnow-v300-drive-sata-120-gb-ssd-1" id="markdown-toc-kingston-ssdnow-v300-drive-sata-120-gb-ssd-1">Kingston SSDNow V300 Drive SATA 120 GB SSD</a></li>
-              <li><a href="#seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm-1" id="markdown-toc-seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm-1">Seagate Barrcuda ST3320620AS SATA 320 GB HDD 7200 rpm</a></li>
+              <li><a href="#seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm-1" id="markdown-toc-seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm-1">Seagate Barracuda ST3320620AS SATA 320 GB HDD 7200 rpm</a></li>
             </ul>
           </li>
           <li>
 <a href="#crystal-disk-mark" id="markdown-toc-crystal-disk-mark">Crystal Disk Mark</a>            <ul>
               <li><a href="#samsung-950-pro-nvme-m2-512-gb-ssd-3" id="markdown-toc-samsung-950-pro-nvme-m2-512-gb-ssd-3">Samsung 950 PRO NVMe M.2 512 GB SSD</a></li>
               <li><a href="#kingston-ssdnow-v300-drive-sata-120-gb-ssd-2" id="markdown-toc-kingston-ssdnow-v300-drive-sata-120-gb-ssd-2">Kingston SSDNow V300 Drive SATA 120 GB SSD</a></li>
-              <li><a href="#seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm-2" id="markdown-toc-seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm-2">Seagate Barrcuda ST3320620AS SATA 320 GB HDD 7200 rpm</a></li>
+              <li><a href="#seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm-2" id="markdown-toc-seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm-2">Seagate Barracuda ST3320620AS SATA 320 GB HDD 7200 rpm</a></li>
             </ul>
           </li>
           <li>
 <a href="#aida64-engineer" id="markdown-toc-aida64-engineer">AIDA64 Engineer</a>            <ul>
               <li><a href="#samsung-950-pro-nvme-m2-512-gb-ssd-4" id="markdown-toc-samsung-950-pro-nvme-m2-512-gb-ssd-4">Samsung 950 PRO NVMe M.2 512 GB SSD</a></li>
               <li><a href="#kingston-ssdnow-v300-drive-sata-120-gb-ssd-3" id="markdown-toc-kingston-ssdnow-v300-drive-sata-120-gb-ssd-3">Kingston SSDNow V300 Drive SATA 120 GB SSD</a></li>
-              <li><a href="#seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm-3" id="markdown-toc-seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm-3">Seagate Barrcuda ST3320620AS SATA 320 GB HDD 7200 rpm</a></li>
+              <li><a href="#seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm-3" id="markdown-toc-seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm-3">Seagate Barracuda ST3320620AS SATA 320 GB HDD 7200 rpm</a></li>
             </ul>
           </li>
         </ul>
@@ -245,8 +245,8 @@
 <img src="prodSSD-V300-thumb.png" alt="Kingston SSDNow V300 Drive SATA 120 GB SSD" title="Kingston SSDNow V300 Drive"></p>
   </li>
   <li>
-    <p><a href="http://www.cnet.com/products/seagate-barracuda-7200-10-hard-drive-320-gb-sata-3gb-s/specs/">Seagate Barrcuda ST3320620AS SATA 3.5” 320 GB HDD 7200 rpm</a>
-<img src="seagate.jpg" alt="Seagate Barrcuda ST3320620AS SATA 320 GB HDD 7200 rpm" title="Seagate Barrcuda ST3320620AS SATA 320 GB"></p>
+    <p><a href="http://www.cnet.com/products/seagate-barracuda-7200-10-hard-drive-320-gb-sata-3gb-s/specs/">Seagate Barracuda ST3320620AS SATA 3.5” 320 GB HDD 7200 rpm</a>
+<img src="seagate.jpg" alt="Seagate Barracuda ST3320620AS SATA 320 GB HDD 7200 rpm" title="Seagate Barracuda ST3320620AS SATA 320 GB"></p>
   </li>
 </ol>
 
@@ -421,7 +421,7 @@
 
 <p><img src="as-ssd-kingston.png" alt=""></p>
 
-<h6 id="seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm">Seagate Barrcuda ST3320620AS SATA 320 GB HDD 7200 rpm</h6>
+<h6 id="seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm">Seagate Barracuda ST3320620AS SATA 320 GB HDD 7200 rpm</h6>
 
 <p><img src="as-ssd-seagate.png" alt=""></p>
 
@@ -435,7 +435,7 @@
 
 <p><img src="atto-kingston.png" alt=""></p>
 
-<h6 id="seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm-1">Seagate Barrcuda ST3320620AS SATA 320 GB HDD 7200 rpm</h6>
+<h6 id="seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm-1">Seagate Barracuda ST3320620AS SATA 320 GB HDD 7200 rpm</h6>
 
 <p><img src="atto-seagate.png" alt=""></p>
 
@@ -449,7 +449,7 @@
 
 <p><img src="cdm-kingston.png" alt=""></p>
 
-<h6 id="seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm-2">Seagate Barrcuda ST3320620AS SATA 320 GB HDD 7200 rpm</h6>
+<h6 id="seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm-2">Seagate Barracuda ST3320620AS SATA 320 GB HDD 7200 rpm</h6>
 
 <p><img src="cdm-seagate.png" alt=""></p>
 
@@ -471,7 +471,7 @@
 
 <p><img src="aida64-kingston.png" alt=""></p>
 
-<h6 id="seagate-barrcuda-st3320620as-sata-320-gb-hdd-7200-rpm-3">Seagate Barrcuda ST3320620AS SATA 320 GB HDD 7200 rpm</h6>
+<h6 id="seagate-barracuda-st3320620as-sata-320-gb-hdd-7200-rpm-3">Seagate Barracuda ST3320620AS SATA 320 GB HDD 7200 rpm</h6>
 
 <ul>
   <li>Linear read</li>
