--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     </div>
                     <form method="GET" id="site_search">
                         <div id="searchbar" class="input-group input-group-lg" style="margin-top:20px;">
-                          <input id="search-input" class="form-control form-control-inline" type="search" placeholder="Hledát">
+                          <input id="search-input" class="form-control form-control-inline" type="search" placeholder="Hledat">
                           <span class="input-group-btn"  style="padding-left: 2px;">
                             <button class="btn btn-lg btn-primary" type="submit">
                               <span class="glyphicon glyphicon-search"></span>
