--- a/cs/littera/rustina/sitemap.html
+++ b/cs/littera/rustina/sitemap.html
@@ -203,6 +203,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <ul>
 
 	
+		<li><a href="/ru/webinars/2017_03_09_rggu.html">Проект "Littera" в помощь преподавателю РКИ: формирование социокультурной компетенции на уроках РКИ при помощи электронных ресурсов</a></li>		
+	
+
+	
 
 	
 
@@ -293,21 +297,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 
 	
+		<li><a href="/ru/">Didactics CZ - Дидактический портал</a></li>		
+	
+
+	
 		<li><a href="/">Didactics CZ - Didaktický portál</a></li>		
 	
 
 	
 
 	
-		<li><a href="/cs/littera/rustina/cteni/">Čtení</a></li>		
-	
-
-	
-		<li><a href="/cs/littera/rustina/ustni_projev/">Ústní projev</a></li>		
-	
-
-	
-		<li><a href="/cs/littera/rustina/jdu_na_vyuku/">Jdu na výuku</a></li>		
+		<li><a href="/cs/littera/rustina/hry/">Hry</a></li>		
 	
 
 	
@@ -319,7 +319,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 
 	
-		<li><a href="/cs/littera/rustina/hry/">Hry</a></li>		
+		<li><a href="/cs/littera/rustina/ustni_projev/">Ústní projev</a></li>		
+	
+
+	
+		<li><a href="/cs/littera/rustina/jdu_na_vyuku/">Jdu na výuku</a></li>		
+	
+
+	
+		<li><a href="/cs/littera/rustina/cteni/">Čtení</a></li>		
 	
 
 	
