blocked webinar registration

--- a/404.html
+++ b/404.html
@@ -237,9 +237,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="littera-content">
     <h1 id="chyba-404----stranka-nenalezena">Chyba 404 – stránka nenalezena</h1>
 
-<p><strong>Chyba:</strong> Omlouváme se, ale stránka kterou hledáte, se zde nenachází. Hledaná informace by se mohla nacházet na některé z těchto stránek:</p>
+<p><strong>Chyba:</strong> Omlouváme se, ale stránka kterou hledáte, se zde nenachází. Hledaná informace by se mohla nacházet na některé z <a href="/cs/littera/rustina/#materialy">těchto stránek</a>.</p>
 
-<p>&lt;/cs/littera/rustina/#publikovan-materily&gt;</p>
 
 
 </div>
