--- a/ru/index.html
+++ b/ru/index.html
@@ -350,7 +350,7 @@
 <li>Проект "Littera" &mdash; повышение качества обучения языкам в системе среднего и высшего образования.</li>
 <li>Электронные ресурсы для обучения русскому языку, созданные в Чехии.</li>
 <li>Q&amp;A &mdash; вопросы и ответы.</li> </ol></p>
-    <button type="submit" class="btn btn-default btn-success pull-right" data-toggle="modal" data-target="#webinar-rggu-registration-modal" tabindex="13">Записаться на вебинар</button>
+<!--    <button type="submit" class="btn btn-default btn-success pull-right" data-toggle="modal" data-target="#webinar-rggu-registration-modal" tabindex="13">Записаться на вебинар</button> -->
   </div>
 </div>
 
@@ -886,7 +886,7 @@
     
     <script type="text/javascript">
 		var addthis_config = {
-	      	ui_language: "cs"
+	      	ui_language: "ru"
 		}
 	</script>
     
