--- a/ru/webinars/2017_03_09_rggu.html
+++ b/ru/webinars/2017_03_09_rggu.html
@@ -221,7 +221,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li>Проект "Littera" &mdash; повышение качества обучения языкам в системе среднего и высшего образования.</li>
 <li>Электронные ресурсы для обучения русскому языку, созданные в Чехии.</li>
 <li>Q&amp;A &mdash; вопросы и ответы.</li> </ol></p>
-    <button type="submit" class="btn btn-default btn-success pull-right" data-toggle="modal" data-target="#webinar-rggu-registration-modal" tabindex="13">Записаться на вебинар</button>
+<!--    <button type="submit" class="btn btn-default btn-success pull-right" data-toggle="modal" data-target="#webinar-rggu-registration-modal" tabindex="13">Записаться на вебинар</button> -->
   </div>
 </div>
 
