--- a/ru/index.html
+++ b/ru/index.html
@@ -473,7 +473,7 @@
 
 <p>Присоединяйтесь к нам, к сообществу интересных людей, которые любят и умеют учиться и хотят передавать свои знания другим!</p>
 
-<p>Портал был основан в 2017-м году учеными-дидактиками из чешских университетов. Первые материалы были адресованы преподавателям русского языка в Чешской республике.</p>
+<p>Портал был основан в 2017-м году учёными-дидактиками из чешских университетов. Первые материалы были адресованы преподавателям русского языка в Чешской республике.</p>
 
 </div>							
                     </div>
